--- a/JS/task2/task-2-1.html
+++ b/JS/task2/task-2-1.html
@@ -5,69 +5,101 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://at.alicdn.com/t/font_1499726_u1xlqtwz7vs.css" rel="stylesheet" type="text/css">
     <link href="./Sass/task-2-1.css" rel="stylesheet" type="text/css">
     <title>Document</title>
 </head>
 
 <body>
-    <div class="wrap">
-        <div class="hot"></div>
+ 
+    <div class="box" >
+     
+
         <div class="header">
-            <img src="./img/arrows.png">
-        </div>
-
-
-
-        <div class="distribution">
-            <span>玩家配比</span>
-        </div>
-
-
-        <div class="role">
-            <div class="role-logo">
-                <img src="./img/photo-1.png">
-                <span>幽灵&nbsp;2&nbsp;人</span>
+               <img class="select" src="./img/list.png">
             </div>
 
-            <div class="role-logo">
-                <img src="./img/photo-2.png">
-                <span>水民&nbsp;6&nbsp;人</span>
-            </div>
-        </div>
+      <div class="pop">
+            <label class="an" for="t1"></label>
+            <input type="checkbox" id="t1">
 
-        <div class="word">
-            <div class="box">
-                <div class="civilian">
-                    <span>水民词组</span>
-
-
+            <div class="list">
+                    <div class="list-1">
+                        <div class="left">
+                            <div class="notice">
+                                <i class="iconfont icon-gonggao"></i>
+                            </div>
+                            <span class="text">公告</span>
+                        </div>
+                        <span class="text-1">></span>
+                    </div>
+    
+                    <div class="list-1">
+                        <div class="left">
+                            <div class="notice">
+                                <i class="iconfont icon-shezhi"></i>
+                            </div>
+                            <span class="text">设置</span>
+                        </div>
+                        <span class="text-1">></span>
+                    </div>
+                    <div class="list-1">
+                        <div class="left">
+                            <i class="iconfont icon-Group- lo"></i>
+                            <span class="text">帮助</span>
+                        </div>
+                        <span class="text-1">></span>
+                    </div>
+                    <div class="list-1">
+                        <div class="left">
+                            <i class="iconfont icon-guanyu  lo"></i>
+                            <span class="text">关于</span>
+                        </div>
+                        <span class="text-1">></span>
+                    </div>
                 </div>
 
+        <div class="box-1">
 
-                <div class="civilian">
-                    <span>幽灵词组</span>
+            <div class="block-1">
+                <img src="./img/click.png" style="opacity: 0;">
+                <span>上次游戏：捉鬼猜谜版</span>
+                 <img src="./img/click.png">
+            </div>
+
+            <div class="box-2">
+                <div class="block-2">
+                    <span>捉鬼游戏</span>
                 </div>
+
+                <div class="box-3">
+                    <button class="an">简化版</button>
+                    <span>有1133个用户正在玩此款游戏</span>
+
+                    <div class="box-4">
+                        <div class="block-4">猜词版</div>
+                        <img src="./img/arrow.png">
+                    </div>
+                    <span>有1133个用户正在玩此款游戏</span>
+
+                    <button>白痴版</button>
+                    <span>有1133个用户正在玩此款游戏</span>
+                </div>
+
+                <div class="dot">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </div>
+
             </div>
         </div>
-
-
-        <div class="amount">
-            <div class="number">
-                <span>请输入玩家数量</span>
-            </div>
-        </div>
-
-        <div class="footer">
-            <button type="button">去发牌</button>
-        </div>
-
-
-
-
-
-
-
-
     </div>
+</div>
+<script src="./JS/jquery-3.4.1.slim.js"></script>
+<script type="text/javascript" src="./JS/task-2-1.js"></script>
 </body>
+
 </html>
+
