--- a/JS/task3/task-4-1.html
+++ b/JS/task3/task-4-1.html
@@ -17,60 +17,23 @@
             <img src="./img/prompt.png">
         </div>
         <div class="result">
+            <p class="end"></p>
             <img src="./img/logo.png">
-            <span>太棒了！你知道么？在捉鬼游戏中只有20%的卧底取得游戏最终的胜利哦！</span>
+            <span class="end1"></span>
         </div>
 
         <div class="result-1">
-            <span>本次游戏共计用时0小时25分钟</span>
             <div class="result-2">
-                <span>杀手&nbsp;&nbsp;&nbsp;0人</span>
-                <span>警察&nbsp;&nbsp;1人</span>
-                <span>平民&nbsp;&nbsp;6人</span>
+                <p class="a1">1</p>
+                <p class="a2">2</p>
             </div>
-            <div class="result-2">
-                <span>狙击手1人</span>
-                <span>医生&nbsp;&nbsp;1人</span>
-                <span class="none">平民&nbsp;&nbsp;6人</span>
-            </div>
-        <span>卧底词汇：爱新觉罗</span>
-        <span>水民词汇：努尔哈赤</span>
         </div>
     </div>
-
-<div class="coat">
-<div class="box-bottom">
-<div class="box-bottom-1">
-    <span class="black">第1天</span>
-    <span>0小时07分</span>
-</div>
-<span>晚上：5号被杀手杀死，5号是水民</span>
-<span>白天：8号被全民投票投死，8号是杀手</span>
-</div>
-</div>
+    <div class="coat">
 
 
-<div class="coat">
-        <div class="box-bottom">
-        <div class="box-bottom-1">
-            <span class="black">第2天</span>
-            <span>0小时07分</span>
-        </div>
-        <span>晚上：5号被杀手杀死，5号是水民</span>
-        <span>白天：8号被全民投票投死，8号是杀手</span>
-        </div>
-        </div>
-        
-        <div class="coat" style="padding-bottom: 100px;">
-                <div class="box-bottom">
-                <div class="box-bottom-1">
-                    <span class="black">第3天</span>
-                    <span>0小时07分</span>
-                </div>
-                <span>晚上：5号被杀手杀死，5号是水民</span>
-                <span>白天：8号被全民投票投死，8号是杀手</span>
-                </div>
-                </div>
+    </div>
+
 
         <div class="footer">
        <input class="button-1" type="button"  value="再来一局" onclick="location.href='https://zhuchunyu1995.github.io/xzy/css/task13/task13-3.html'" >
